# Crypto-realtime

./: .gitignore  README.md  pyproject.toml
Services/candles/: Dockerfile  Makefile  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
Services/news/: Dockerfile  Makefile  README.md  config.py  news_data_source.py  news_downloader.py  pyproject.toml  run.py  settings.env
Services/sentiment/: Dockerfile  Makefile  README.md  config.py  finetune_dataset.py  llamacpp.env  ollama.env  pyproject.toml  run.py  settings.env
Services/sentiment/llm/: base.py  config.py  download_model.py  factory.py  llamacpp.env  llamacpp.py  ollama.py  openai.py
Services/ta/: Dockerfile  Makefile  candle.py  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env  technical_indicators.py
Services/to-feature-store/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  live.settings.env  live.settings.sentiment.env  pyproject.toml  run.py  settings.env  sink.py
Services/trades/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  live.settings.env  multistage.Dockerfile  pyproject.toml  requirements.txt  run.py  settings.env
Services/trades/kraken_api/: rest.py  trade.py  websocket.py
docker-compose/: Makefile  news-sentiment-live.yaml  redpanda.yaml  technical-indicators-historical.yaml  technical-indicators-pipeline.yaml
